--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <figure class="team_item_figure"><img src="img/wakabakashi.jpg" alt=""></figure>
                         <div class="team_item_body">
                             <h3 class="team_item_name">Patrick Yuji Wakabayashi</h3>
-                            <p class="team_item_text">I have been working in the ad:tech industry for 13 years. and have experience starting a business in the Philippines with the investment of a publicly traded company and launching the first sweepstakes media company in the Philippines.<br>After that, I founded the Malaysian office of a publicly traded company in Japan, where I spent about 5 years developing and growing ad:tech products in Southeast Asia, and became CEO in 2019.<br>I joined RiskTaker in 2021 and lead the company's overall overseas expansion.</p>
+                            <p class="team_item_text">Has experience in the Ad Tech industry for 13 years. Started his own company in the Philippines with the investment of a listed company and launched the first reward media in the Philippines from scratch.<br>After starting his own company in the Philippines, he went to Malaysia as the head of a subsidiary of a listed company, and for about 5 years, he expanded and grew the company's Adtech solution for clients and publishers in Southeast Asia, and became CEO in 2019.<br>In 2021, he joined Risktaker to lead the overall business overseas expansion.</p>
                         </div>
                     </li>
                     <li class="team_item team_item-rowReverse">
